# solana-trading-app

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts  vitest.config.js
public/: cat.json  crypto-logo-1.svg:shield  crypto-logo-2.icns  crypto-logo-2.svg:shield  crypto-logo-3.svg:shield
src/: App.css  App.tsx  ErrorBoundary.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tokens.db
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  wallet.rs
src-tauri/src/keyring/: mod.rs
src-tauri/src/token_utils/: mod.rs
src/components/: ExplorerLink.tsx  QuoteDetails.tsx  TokenSelector.tsx
src/components/common/: ErrorBoundary.tsx
src/components/layout/: AuthenticatedLayout.tsx  Sidebar.tsx
src/components/modals/: QuoteDetails.tsx  TransactionConfirmation.tsx  TransactionResult.tsx
src/components/network/: NetworkSelector.tsx
src/constants/: explorers.ts  networks.ts
src/hooks/: useTheme.ts
src/pages/Dashboard/: index.tsx
src/pages/History/: index.tsx
src/pages/Send/: index.tsx
src/pages/Settings/: index.tsx
src/pages/Swap/: index.tsx
src/pages/Welcome/: index.tsx
src/styles/: cyberpunk.css  index.css  layouts.css  spinner.css  themes.css
src/types/: index.ts
src/utils/: executeSwap.ts  explorer.ts  fetchTokenBalances.ts  getAllTokens.ts  getPriorityFeeEstimate.ts  getSwapQuote.ts  hasSufficientBalance.ts  tokenImage.ts  tokenQueryUtils.ts  wallet.ts
