[package]
name = "tradingapp"
version = "0.1.0"
description = "A Tauri App"
authors = ["algorhythmic"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22.1"
keyring = "3.6.1"
tauri-plugin-opener = "2.0.0"
security-framework = "2.9.2"
solana-sdk = "1.17"
bs58 = "0.5"
core-foundation = "0.9.3"
core-foundation-sys = "0.8.4"
security-framework-sys = "2.9.1"
rusqlite = { version = "0.29", features = ["bundled"] }
reqwest = { version = "0.11", features = ["json"] }
lazy_static = "1.4"


[features]
custom-protocol = ["tauri/custom-protocol"]
